--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,17 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.code.gson:gson:2.8.7'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
+    // GSON library which is used to convert POJO to JSON and vice versa
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
+    // okhttp library used to observe the api call logs on LogCat
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.0.1'
+    // Glide is used for image loading and image caching
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.etebarian:meow-bottom-navigation-java:1.2.0'
-implementation 'com.google.android.material:material:1.4.0'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
