--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,21 +12,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Olx">
-        <activity android:name=".mobileSection.MobileMainActivity"></activity>
-        <activity android:name=".bikes.BikeMainActivity"></activity>
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".mobileSection.MobileDetails"></activity>
+        <activity android:name=".mobileSection.MobileMainActivity" />
+        <activity android:name=".bikes.BikeMainActivity" />
+        <activity android:name=".LoginActivity" />
         <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".MainActivity">
-
-        </activity>
-
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
