Chat SEctrion and Show product detail activity_mobile_details.xml

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ android {
 
 dependencies {
 
-
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.google.code.gson:gson:2.8.7'
     implementation 'com.squareup.retrofit2:retrofit:2.6.1'
     // GSON library which is used to convert POJO to JSON and vice versa
