--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,44 +6,26 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-
-
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Olx">
-
-
-
-        <activity android:name=".ShowProductDetailForBike.BikeDetailActivity"></activity>
+        <activity android:name=".Chat_Section.ChatRecyclerView.ChatActivity"></activity>
+        <activity android:name=".ShowProductDetailForBike.BikeDetailActivity" />
         <activity android:name=".ShowProductDetail.MobileDetails" />
-        <activity android:name=".mobileSection.MobileMainActivity">
-
-
-
-        </activity> <!-- </application> -->
+        <activity android:name=".mobileSection.MobileMainActivity"></activity> <!-- </application> -->
         <activity android:name=".bikes.BikeMainActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".SplashScreen">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".MainActivity">
-
-        </activity>
-
-
-
-
-
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
