--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,5 @@ dependencies {
     implementation 'com.etebarian:meow-bottom-navigation-java:1.2.0'
     implementation 'com.android.support:design:30.1.1'
 //    implementation   ' com.android.support:support-core-ui:28.0.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
