--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,8 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.github.swapnil1104:OtpEditText:{current_lib_ver}'
+    implementation 'com.github.swapnil1104:OtpEditText:1.0.2-rc'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.google.code.gson:gson:2.8.7'
     implementation 'com.squareup.retrofit2:retrofit:2.6.1'
